tests/failing/func-call-less-args.c

int func1(int a, int b) {
    return 3;
}

int main() {
    func1(123);
}
